# self-autonomous-car

./: .gitignore
install/: local_setup.sh  setup.sh
install/car_vision/lib/car_vision/: csi_camera_publisher  image_viewer
install/car_vision/share/car_vision/: package.ps1  package.sh  package.xml
install/car_vision/share/car_vision/launch/: camera.launch.py
src/car_vision/: README.md  package.xml  setup.cfg  setup.py
src/car_vision/car_vision/: csi_camera_publisher.py  image_collector.py  image_viewer.py
src/car_vision/launch/: camera.launch.py
